Add GET /user/chiefEngineer/{userID}/vehicleSetUp/{elementID} endpoint
